--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-image: url("ubuntu.jpg");
+}
+
+h1 {
+    font-weight: bold;
+    font-size: large;
 }
 
 .container-1 {
