--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ h1 {
     border: solid 2px;
     border-radius: 5px;
     padding: 0px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .container {
